# chess-ai-tutor

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/pipeline/: augment_stockfish.py  build_textbook_dataset.py  collect_textbooks.py  convert_lines_to_sft.py  convert_lines_to_sft_thinking.py  convert_lines_to_tool_calls.py  extract_annotations.py  generate_encoder_data.py  generate_lines.py  generate_phase2_data.py  pgnmentor_files.txt  prepare_datasets.py  render_boards.py
docker/: docker-compose.yml
recipes-inference/qwen3-4b-thinking-lora/: docker-compose.yml  start.sh
recipes-train/encoder-pretrain/: config.yaml  start.sh  stop.sh  train.py
recipes-train/qwen3-4b-encoder-phase1-sft/: config.yaml  start.sh  stop.sh  train.py
recipes-train/qwen3-4b-phase1-coach-sft/: config.yaml  start.sh  (+2 more)
scripts/: chain_1b.sh  install-nvidia-persistence.sh  install_stockfish.sh  start-review.sh  start_pipeline.sh  start_train.sh  start_vllm.sh  stop-review.sh  stop_pipeline.sh  stop_train.sh  stop_vllm.sh  test.sh  train.sh
static/: app.js  index.html  style.css
tests/: test_analysis.py  test_build_textbook_dataset.py  test_chesscom.py  test_encoder.py  test_generate_lines.py  test_llm_tools.py  test_mcp_tools.py  test_prepare_datasets.py  test_prompts.py  test_representations.py  test_rewards.py  test_stockfish.py  test_tutor_tools.py  test_verification.py  test_web.py
training/: SFT_SUMMARY.md  TODO_ENCODER.md  TODO_RL.md  encoder_collator.py  encoder_model.py  lib.py  run_encoder.sh  train.py  train_encoder.py  train_encoder_pretrain.py
(+49 files in other folders)
